# trix

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.rst  build.py  conanfile.py  conanfile.txt  pyproject.toml  tasks.py
conan/: trix.profile
conan/recipes/openblas/all/: conandata.yml  conanfile.py
conan/recipes/openblas/all/test_package/: conanfile.py
include/trix/: config.h.in  matrix.h  printing.h  types.h  utils.h  vector.h  version.h.in
src/: matrix.cpp  trix.cppm
src/trixx/: binding.cpp
tests/: test_common.h  test_matrix.cpp  test_module.cpp  test_performance.cpp  test_vector.cpp
